Clean up suite parsing code
Add outline for how dependencies will work.

--- a/mistest/tests/test_suite.yaml
+++ b/mistest/tests/test_suite.yaml
@@ -1,6 +1,8 @@
-Directives:
-   - ordered
-Suite:
+Ordering: any
+Dependencies:
+   - installation.py
+   - configuration.py
+Tests:
    - a_test_case.py:
         arguments: -y
    - sub_suite/sub_test_suite.yaml
