Enable parallelism and fix ordering
Ordering 'any' and 'sequential' now work and the '-j' option
can be used for creating multiple local executors.

--- a/mistest/tests/test_suite.yaml
+++ b/mistest/tests/test_suite.yaml
@@ -3,6 +3,7 @@ Dependencies:
    - installation.py
    - configuration.py
 Tests:
+   - sleepy_test.sh
    - a_test_case.py:
         arguments: -y
    - sub_suite/sub_test_suite.yaml
