Improve dependency handling
Duplicate dependencies are now detected and eliminated during
suite parsing.

--- a/mistest/tests/sub_suite/sub_test_suite.yaml
+++ b/mistest/tests/sub_suite/sub_test_suite.yaml
@@ -1,4 +1,7 @@
 Ordering: sequential
+Dependencies:
+   - ../installation.py
+   - ../configuration.py
 Tests:
    - another_test_case.py:
         arguments: -y
